# Framework

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CamInput.cc  CamInput.h  TestRotate.cc  TestRotate.h  main.cc  test.dds  test.shader  test_compute.cshader  test_inc.shader
data/: test.3d
data/shaders/: UI.shader
ext/: CMakeLists.txt
ext/imgui/: imconfig.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  stb_truetype.h
src/: CMakeLists.txt
src/Components/: CMakeLists.txt  Camera.cc  Camera.h  MeshRenderer.cc  MeshRenderer.h  Renderer.cc  Renderer.h  Transform.cc  Transform.h
src/Core/: Application.cc  Application.h  CMakeLists.txt  ClassInfo.cc  ClassInfo.h  Debug.cc  Debug.h  EnumStrings.h  Log.cc  Log.h  RefCounted.cc  RefCounted.h  Singleton.h  SmartPtr.h  String.cc  String.h  StringHash.cc  StringHash.h  StringsTable.cc  StringsTable.h  Trackable.cc  Trackable.h  WeakPtr.h  snprintf.h
src/Core/Collections/: Array.h  Array_type.h  Dictionary.h  Dictionary_type.h  Hash.h  Hash_type.h  List.h  List_type.h  Queue.h  Queue_type.h  SimplePool.h  SimplePool_type.h
src/Core/IO/: BitStream.cc  BitStream.h  FileServer.cc  FileServer.h  Path.cc  Path.h
src/Core/Memory/: Allocator.cc  Allocator.h  BlocksAllocator.cc  BlocksAllocator.h  LinearAllocator.cc  LinearAllocator.h  MallocAllocator.cc  MallocAllocator.h  Memory.cc  Memory.h  ScratchAllocator.cc  ScratchAllocator.h
src/Core/Pool/: BaseObject.cc  BaseObject.h  BasePool.cc  BasePool.h  Handle.h  HandleList.h  HandleList_type.h  Handle_type.h  Pool.h  Pool_type.h
src/Core/Time/: TimeServer.cc  TimeServer.h  TimeSource.cc  TimeSource.h
src/Game/: BaseComponentsList.cc  BaseComponentsList.h  BaseMsgDispatcher.cc  BaseMsgDispatcher.h  CMakeLists.txt  Component.cc  Component.h  ComponentsList.h  ComponentsList_type.h  Entity.cc  Entity.h  MsgDispatcher.h  MsgDispatcher_type.h  SerializationServer.cc  SerializationServer.h
src/Managers/: BaseManager.cc  BaseManager.h  CMakeLists.txt  ComponentsManager.cc  ComponentsManager.h  EntitiesManager.cc  EntitiesManager.h  GetManager.h  RenderersManager.cc  RenderersManager.h  TransformsManager.cc  TransformsManager.h
src/Math/: AxisAngle.cc  AxisAngle.h  Bounds.cc  Bounds.h  CMakeLists.txt  Math.cc  Math.h  Matrix.cc  Matrix.h  Plane.cc  Plane.h  Quaternion.cc  Quaternion.h  Vector2.cc  Vector2.h  Vector3.cc  Vector3.h  Vector4.cc  Vector4.h
src/Render/: CMakeLists.txt  DrawPrimitives.h  Key.cc  Key.h  KeyCode.h  MaterialParamsBlock.cc  MaterialParamsBlock.h  RenderModeState.cc  RenderModeState.h  RenderObjects.h  RenderQueue.cc  RenderQueue.h  RenderTarget.cc  RenderTarget.h  Renderer.h  VertexDecl.cc  VertexDecl.h
src/Render/Base/: BaseComputeBuffer.cc  BaseComputeBuffer.h  BaseIndexBuffer.cc  BaseIndexBuffer.h  BaseRenderer.cc  BaseRenderer.h  BaseShaderProgram.cc  BaseShaderProgram.h  BaseTextureBuffer.cc  BaseTextureBuffer.h  BaseVertexBuffer.cc  BaseVertexBuffer.h  HardwareBuffer.cc  HardwareBuffer.h
src/Render/Image/: Bits.cc  Bits.h  Image.cc  Image.h  ImageFormat.cc  ImageFormat.h  Pixels.cc  Pixels.h
src/Render/OpenGL/: OGLComputeBuffer.cc  OGLComputeBuffer.h  OGLIndexBuffer.cc  OGLIndexBuffer.h  OGLRenderer.cc  OGLRenderer.h  OGLShaderProgram.cc  OGLShaderProgram.h  OGLTextureBuffer.cc  OGLTextureBuffer.h  OGLVertexBuffer.cc  OGLVertexBuffer.h  OpenGL.cc  OpenGL.h
src/Render/Resources/: ComputeShader.cc  ComputeShader.h  DDSLoader.cc  DDSLoader.h  Material.cc  Material.h  Mesh.cc  Mesh.h  RenderResource.h  Resource.cc  Resource.h  ResourceId.h  ResourceName.h  ResourceServer.cc  ResourceServer.h  Shader.cc  Shader.h  Texture.cc  Texture.h
src/Render/Utils/: Color.cc  Color.h  Rect.cc  Rect.h
